# serializer version: 1
# name: TestSessionRecordings.test_can_filter_by_exact_url
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'rageclick'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), equals(trim(TRAILING '/'
                                                                                                                                                                                         FROM heatmaps.current_url), trim(TRAILING '/'
                                                                                                                                                                                                                          FROM 'http://example.com')), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_filter_by_exact_url.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'rageclick'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), equals(trim(TRAILING '/'
                                                                                                                                                                                         FROM heatmaps.current_url), trim(TRAILING '/'
                                                                                                                                                                                                                          FROM 'http://example.com/about')), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_filter_by_test_accounts
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'click'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0), in(heatmaps.session_id,
                                                                                                                                                                                                                                                                                    (SELECT DISTINCT events.`$session_id` AS `$session_id`
                                                                                                                                                                                                                                                                                     FROM events
                                                                                                                                                                                                                                                                                     WHERE and(equals(events.team_id, 99999), notEmpty(events.`$session_id`), and(ifNull(less(toTimeZone(events.timestamp, 'UTC'), toDateTime64('today', 6, 'UTC')), 0), ifNull(greaterOrEquals(toTimeZone(events.timestamp, 'UTC'), toDateTime64('2023-03-08 00:00:00.000000', 6, 'UTC')), 0), ifNull(notILike(toString(replaceRegexpAll(nullIf(nullIf(JSONExtractRaw(events.properties, '$host'), ''), 'null'), '^"|"$', '')), '%127.0.0.1%'), 1)))))))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_filter_by_test_accounts.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'click'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_filter_by_url_pattern_http://example.com*
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'rageclick'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), match(heatmaps.current_url, '^http://example.com$'), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_filter_by_url_pattern_http://example.com*.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'rageclick'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), match(heatmaps.current_url, '^http://example.com.+$'), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_filter_by_url_pattern_http://example.com/products*
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'rageclick'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), match(heatmaps.current_url, '^http://example.com$'), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_filter_by_url_pattern_http://example.com/products*.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'rageclick'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), match(heatmaps.current_url, '^http://example.com/products.+$'), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_filter_by_url_pattern_http://example.com/products/*/parts/*
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'rageclick'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), match(heatmaps.current_url, '^http://example.com$'), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_filter_by_url_pattern_http://example.com/products/*/parts/*.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'rageclick'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), match(heatmaps.current_url, '^http://example.com/products/.+/parts/.+$'), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_filter_by_url_pattern_http://example.com/products/*/reviews/*
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'rageclick'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), match(heatmaps.current_url, '^http://example.com$'), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_filter_by_url_pattern_http://example.com/products/*/reviews/*.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'rageclick'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), match(heatmaps.current_url, '^http://example.com/products/.+/reviews/.+$'), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_filter_by_url_pattern_http://example.com/products/1*
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'rageclick'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), match(heatmaps.current_url, '^http://example.com$'), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_filter_by_url_pattern_http://example.com/products/1*.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'rageclick'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), match(heatmaps.current_url, '^http://example.com/products/1.+$'), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_filter_by_url_pattern_http://example.com/products/1*/parts/*
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'rageclick'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), match(heatmaps.current_url, '^http://example.com$'), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_filter_by_url_pattern_http://example.com/products/1*/parts/*.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'rageclick'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), match(heatmaps.current_url, '^http://example.com/products/1.+/parts/.+$'), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_filter_by_url_pattern_where_end_is_anchored
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'rageclick'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), match(heatmaps.current_url, '^http://example.com$'), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_filter_by_viewport_0_min_150
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), ifNull(greaterOrEquals(heatmaps.viewport_width, round(divide(150, 16))), 0), equals(heatmaps.type, 'click'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_filter_by_viewport_1_min_161
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), ifNull(greaterOrEquals(heatmaps.viewport_width, round(divide(161, 16))), 0), equals(heatmaps.type, 'click'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_filter_by_viewport_2_min_177
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), ifNull(greaterOrEquals(heatmaps.viewport_width, round(divide(177, 16))), 0), equals(heatmaps.type, 'click'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_filter_by_viewport_3_min_201
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), ifNull(greaterOrEquals(heatmaps.viewport_width, round(divide(201, 16))), 0), equals(heatmaps.type, 'click'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_filter_by_viewport_4_min_161_and_max_192
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), ifNull(greaterOrEquals(heatmaps.viewport_width, round(divide(161, 16))), 0), ifNull(lessOrEquals(heatmaps.viewport_width, round(divide(192, 16))), 0), equals(heatmaps.type, 'click'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_get_all_data_response
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'click'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_get_count_by_aggregation
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'click'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_get_count_by_aggregation.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(DISTINCT distinct_id) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'click'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_get_empty_response
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'click'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2024-05-03')), 0), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_get_filter_by_click
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'click'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_get_filter_by_click.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'rageclick'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_get_filter_by_date_from
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'click'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_get_filter_by_relative_date
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'click'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-08')), 0), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus(toDate('2023-03-14'), toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_get_filter_by_relative_date.1
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT pointer_target_fixed AS pointer_target_fixed,
         pointer_relative_x AS pointer_relative_x,
         client_y AS client_y,
         count(*) AS cnt
  FROM
    (SELECT heatmaps.distinct_id AS distinct_id,
            heatmaps.pointer_target_fixed AS pointer_target_fixed,
            round(divide(heatmaps.x, heatmaps.viewport_width), 2) AS pointer_relative_x,
            multiply(heatmaps.y, heatmaps.scale_factor) AS client_y
     FROM heatmaps
     WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'click'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-15')), 0), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus(toDate('2023-03-15'), toIntervalDay(1))), 0)))
  GROUP BY pointer_target_fixed,
           pointer_relative_x,
           client_y
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_get_scrolldepth_counts
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT bucket AS bucket,
         cnt AS bucket_count,
         sum(cnt) OVER (
                        ORDER BY bucket DESC) AS cumulative_count
  FROM
    (SELECT multiply(intDiv(scroll_y, 100), 100) AS bucket,
            count(*) AS cnt
     FROM
       (SELECT heatmaps.distinct_id AS distinct_id,
               multiply(plus(heatmaps.y, heatmaps.viewport_height), heatmaps.scale_factor) AS scroll_y
        FROM heatmaps
        WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'scrolldepth'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-06')), 0), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
     GROUP BY bucket)
  ORDER BY bucket ASC
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
# name: TestSessionRecordings.test_can_get_scrolldepth_counts_by_visitor
  '''
  /* user_id:0 request:_snapshot_ */
  SELECT bucket AS bucket,
         cnt AS bucket_count,
         sum(cnt) OVER (
                        ORDER BY bucket DESC) AS cumulative_count
  FROM
    (SELECT multiply(intDiv(scroll_y, 100), 100) AS bucket,
            count(DISTINCT distinct_id) AS cnt
     FROM
       (SELECT heatmaps.distinct_id AS distinct_id,
               multiply(plus(heatmaps.y, heatmaps.viewport_height), heatmaps.scale_factor) AS scroll_y
        FROM heatmaps
        WHERE and(equals(heatmaps.team_id, 99999), equals(heatmaps.type, 'scrolldepth'), ifNull(greaterOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), toDate('2023-03-06')), 0), ifNull(lessOrEquals(toTimeZone(heatmaps.timestamp, 'UTC'), plus('2025-03-31', toIntervalDay(1))), 0)))
     GROUP BY bucket)
  ORDER BY bucket ASC
  LIMIT 1000000 SETTINGS readonly=2,
                         max_execution_time=60,
                         allow_experimental_object_type=1,
                         format_csv_allow_double_quotes=0,
                         max_ast_elements=4000000,
                         max_expanded_ast_elements=4000000,
                         max_bytes_before_external_group_by=0,
                         transform_null_in=1,
                         optimize_min_equality_disjunction_chain_length=4294967295,
                         allow_experimental_join_condition=1,
                         use_hive_partitioning=0
  '''
# ---
